@@ -1,6 +1,8 @@
 Release 1.0 (in development)
 ============================
 
+* Added the ``extlinks`` extension.
+
 * Allow searching for object names including the module name, like
   ``sys.argv``.
 
